--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy~=1.16.0
 typing==3.6.6
 ruamel.yaml==0.15.85
 requests~=2.2
-tensorflow==1.12.0
+tensorflow
 h5py==2.7.1
 apscheduler==3.5.1
 tqdm==4.29.1
@@ -19,7 +19,7 @@ coloredlogs==10.0
 flask==1.0.2
 flask_cors==3.0.7
 scikit-learn==0.20.2
-rasa_nlu~=0.14.4
+rasa_nlu
 colorhash==1.0.2
 pika==0.12.0
 jsonschema==2.6.0
@@ -27,7 +27,7 @@ packaging~=18.0
 gevent==1.4
 pytz==2018.9
 rasa-core-sdk~=0.12.2
-rasa_core~=0.13.2
+rasa_core
 pymongo==3.7.2
 python-dateutil==2.7.5
 spacy~=2.0.18
